[tool.poetry]
name = "cli-expense-tracker-1"
version = "0.1.0"
description = ""
authors = ["Kirat Bains <kiratbains09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
babel = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
